<resources>
    <string name="app_name">ComicHouseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nvh_image_descrip">Navigation header image</string>
    <string name="email">viewuenoch@gmail.com</string>
    <string name="user_name">Enoch Viewu</string>
    <string name="feed">Feed</string>
    <string name="reader">Reader</string>
    <string name="store">Store</string>
    <string name="library">Library</string>
    <string name="user_profile">Profile</string>
    <string name="about">About</string>
    <string name="comic_image">Comic Cover Image</string>
    <string name="preview">Preview</string>
</resources>